# keri-hs

./: .gitignore  .hlint.yaml  404.html  LICENSE  README.md  cabal.project  flake.nix  index.html  justfile  keri-hs.cabal  mkdocs.yml
.github/workflows/: ci.yml
app/cli/: Main.hs
app/demo/: Main.hs
architecture/: index.html
cli/: index.html
docs/: architecture.md  cli.md  index.md  keri-protocol.md
javascripts/: mermaid.mjs
keri-protocol/: index.html
lib/Keri/: Cesr.hs  Crypto.hs  Event.hs  Kel.hs  KeyState.hs  Prelude.hs
lib/Keri/Cesr/: Decode.hs  DerivationCode.hs  Encode.hs  Primitive.hs
lib/Keri/Crypto/: Blake3.hs  Digest.hs  Ed25519.hs  SAID.hs
lib/Keri/Event/: Inception.hs  Interaction.hs  Receipt.hs  Rotation.hs  Serialize.hs  Version.hs
lib/Keri/Kel/: Append.hs  Replay.hs
lib/Keri/KeyState/: PreRotation.hs  Verify.hs
nix/: project.nix
search/: search_index.json
test/spec/Keri/: CesrSpec.hs  KelSpec.hs  KeyStateSpec.hs
test/spec/Keri/Cesr/: DecodeSpec.hs  DerivationCodeSpec.hs  EncodeSpec.hs
test/spec/Keri/Crypto/: Blake3Spec.hs  DigestSpec.hs  Ed25519Spec.hs  SAIDSpec.hs
test/spec/Keri/Event/: InceptionSpec.hs  InteractionSpec.hs  RotationSpec.hs  SerializeSpec.hs
test/spec/Keri/KeyState/: PreRotationSpec.hs
