cabal-version:   3.0
name:            keri-hs
version:         0.1.0.0
synopsis:        KERI (Key Event Receipt Infrastructure) library
description:
  A learning-oriented Haskell implementation of the KERI
  decentralized identity protocol, supporting Ed25519
  cryptography, CESR encoding, and direct-mode key event
  log management.

license:         Apache-2.0
license-file:    LICENSE
copyright:       (c) 2026 Cardano Foundation
author:          Paolo Veronelli
maintainer:      paolo.veronelli@gmail.com
category:        Cryptography
build-type:      Simple
extra-doc-files: README.md

common language
  default-language:   GHC2021
  default-extensions:
    DerivingStrategies
    DuplicateRecordFields
    LambdaCase
    OverloadedStrings
    RecordWildCards
    StrictData

common opts-lib
  ghc-options:
    -Wall -Werror -Wunused-imports -Wunused-packages
    -Wmissing-export-lists -Wname-shadowing -Wredundant-constraints

common opts-exe
  ghc-options:
    -Wall -Werror -Wunused-imports -Wunused-packages
    -Wmissing-export-lists -threaded -rtsopts -with-rtsopts=-N

library
  import:          language, opts-lib
  hs-source-dirs:  lib
  exposed-modules:
    Keri.Cesr
    Keri.Cesr.Decode
    Keri.Cesr.DerivationCode
    Keri.Cesr.Encode
    Keri.Cesr.Primitive
    Keri.Crypto
    Keri.Crypto.Blake3
    Keri.Crypto.Digest
    Keri.Crypto.Ed25519
    Keri.Event
    Keri.Event.Inception
    Keri.Event.Interaction
    Keri.Event.Receipt
    Keri.Event.Rotation
    Keri.Event.Serialize
    Keri.Event.Version
    Keri.Kel
    Keri.Kel.Append
    Keri.Kel.Replay
    Keri.KeyState
    Keri.KeyState.PreRotation
    Keri.KeyState.Verify
    Keri.Prelude

  build-depends:
    , aeson              >=2.1  && <2.3
    , base               >=4.18 && <5
    , base64-bytestring  >=1.2  && <1.3
    , bytestring         >=0.11 && <0.13
    , crypton            >=0.34 && <2
    , memory             >=0.16 && <1
    , text               >=2.0  && <2.2

executable keri-cli
  import:         language, opts-exe
  hs-source-dirs: app/cli
  main-is:        Main.hs
  build-depends:
    , base
    , base64-bytestring
    , bytestring
    , directory             >=1.3  && <1.5
    , filepath              >=1.4  && <1.6
    , keri-hs
    , optparse-applicative  >=0.17 && <0.19
    , text

executable keri-demo
  import:         language, opts-exe
  hs-source-dirs: app/demo
  main-is:        Main.hs
  build-depends:
    , async           >=2.2 && <2.3
    , base
    , bytestring
    , keri-hs
    , network-simple  >=0.4 && <0.5
    , text

test-suite unit-tests
  import:             language, opts-lib
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test/spec
  main-is:            Main.hs
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  other-modules:
    Keri.Cesr.DecodeSpec
    Keri.Cesr.DerivationCodeSpec
    Keri.Cesr.EncodeSpec
    Keri.CesrSpec
    Keri.Crypto.Blake3Spec
    Keri.Crypto.DigestSpec
    Keri.Crypto.Ed25519Spec
    Keri.Event.InceptionSpec
    Keri.Event.InteractionSpec
    Keri.Event.RotationSpec
    Keri.Event.SerializeSpec
    Keri.KelSpec
    Keri.KeyState.PreRotationSpec
    Keri.KeyStateSpec

  build-depends:
    , base
    , bytestring
    , hspec       >=2.10 && <3
    , keri-hs
    , QuickCheck  >=2.14 && <3
    , text

  build-tool-depends: hspec-discover:hspec-discover
